# MultiBodyVehicle

./: .gitignore  CMakeLists.txt
inc/: SimBase.h  SimConstants.h  SimCore.h  SimLog.h  proto_helper.h
message/: Axle_DoubelWishBone.proto  ChassisBody.proto  DoubleWishBone.proto  Suspension.proto  Vehicle_DW_DW.proto  Wheel.proto  car_basic.proto  generate_cpp.bat  generate_cpp.sh
param/: vehicle_dwdw.json
src/: HelloWorld.cpp
src/basic_example/: SimpleBodiesGUI.cpp  SimpleBodiesGUI.h
src/chains/: ChainsExample.cpp  ChainsExample.h
src/common/: SimCore.cpp  SimLog.cpp  proto_helper.cpp
src/gui/: GLShapeDrawer.cpp  MainGUI.cpp  OpenGLGuiHelper.cpp  OpenGLGuiHelper.h
src/vehicle_example/: SimAxle_DW.cpp  SimAxle_DW.h  SimChassisBody.cpp  SimChassisBody.h  SimDoubleWishbone.cpp  SimDoubleWishbone.h  SimVehicle_DWDW.cpp  SimVehicle_DWDW.h  SimWheel.cpp  SimWheel.h  VehicleCore.cpp  VehicleCore.h  VehicleExample.cpp  VehicleExample.h  VehicleTypes.h  VehicleUtils.cpp  VehicleUtils.h
src/vehicle_param_writer/: dw_dw_writer.cpp  param_writer.cpp  param_writer.h
